many fixes, app is now in half-operational state